refactor: simplfy by removing named slots and wrapper elm
This will also make using `grid` on the parent element a lot easier

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,15 @@
   <ttt-game>
     <ttt-scoreboard slot="scoreboard"></ttt-scoreboard>
     <ttt-board slot="board">
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
-      <ttt-square value="" slot="square"></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
+      <ttt-square value=""></ttt-square>
     </ttt-board>
     <p slot="feedback"></p>
     <button slot="reset" type="button">Reset board</button>
